--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "cookie": "^0.4.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
