--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.8",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "cookie": "^0.4.0",
+    "date-fns": "^2.0.0-beta.2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
